[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "bluesky_cmds"
dist-name = "bluesky-cmds"
author = "Blaise Thompson"
author-email = "blaise@untzag.com"
home-page = "https://github.com/wright-group/bluesky-cmds"
description-file = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
requires = ["appdirs",
            "bluesky-queueserver-api",
            "click",
	    "pyqtgraph",
	    "pyside2",
	    "qtpy",
	    "toml",
	    "toolz",
	    "wrighttools",
	    ]

[tool.flit.scripts]
bluesky-cmds = "bluesky_cmds.__main__:main"

[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
